# davinci

./: .gitignore  CMakeLists.txt  combo.go  config.c  config.cpp  config.go  config.h  device.c  device.cpp  device.go  device.h  gen_keys.go  generate.go  go.mod  go.sum  keyboard.c  keyboard.cpp  keyboard.h  keys_gen.go  main.c  main.cpp  main.go  trim.cpp  trim.h  uinput.go
include/: device.h  virtual_keyboard.h
src/: device.c  main.c  virtual_keyboard.c
tests/: CMakeLists.txt
